--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     </div>
 
   
-    <div class=" container mx-auto tabs tabs-boxed mb-5">
-      <button class="tab tab-active" data-tab="all">All</button>
-      <button class="tab" data-tab="interview">Interview</button>
-      <button class="tab" data-tab="rejected">Rejected</button>
-    </div>
+   <div class="container mx-auto tabs tabs-boxed mb-5 flex gap-4">
+  <button class="tab tab-active btn btn-info" data-tab="all">All</button>
+  <button class="tab btn" data-tab="interview">Interview</button>
+  <button class="tab btn" data-tab="rejected">Rejected</button>
+</div>
 
     <!-- Empty box-->
-    <div id="emptyState" class="hidden container mx-auto text-center py-10">
+    <div id="emptyState" class=" bg-white hidden container mx-auto text-center py-10 rounded-lg my-4 shadow">
       <div class="flex justify-center">
         <img src="images/jobs.png" alt="">
       </div>
