final code added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <h2 class="text-3xl font-bold pl-5 md:pl-0 pb-2">Job Application Tracker</h2>
     </header>
 
+    <!-- Jobs count dashboard -->
+
     <section class="container mx-auto grid md:grid-cols-3 gap-4 p-5 md:p-0">
       <div class="stat bg-white shadow rounded-lg">
         <p class="stat-title font-medium">Total Jobs</p>
@@ -74,6 +76,7 @@
         <p class="text-gray-500">Check back soon for new job opportunities</p>
       </div>
 
+      <!-- Job card parent -->
       <div id="jobContainer" class="container mx-auto space-y-4 pb-6 md:pb-12"></div>
     </section>
 
